# mes-simulator

./: .gitignore  README.md
docker/: README.md  (+3 more)
servers/pipeline/: .dockerignore  Dockerfile  README.md  pyproject.toml  structure.md
servers/pipeline/scripts/: .gitkeep
servers/pipeline/src/: main.py
servers/pipeline/src/api/: health.py  metrics.py  recommendations.py
servers/pipeline/src/config/: __init__.py  settings.py
servers/pipeline/src/domains/: __init__.py
servers/pipeline/src/domains/asset/: __init__.py  constants.py  value_objects.py
servers/pipeline/src/domains/health/: __init__.py  constants.py  value_objects.py
servers/pipeline/src/domains/recommendation/: rules.py  value_objects.py
servers/pipeline/src/messaging/: __init__.py
servers/pipeline/src/messaging/consumer/: __init__.py  kafka_consumer.py
servers/pipeline/src/messaging/provider/: __init__.py  kafka_producer.py
servers/pipeline/src/pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
servers/pipeline/src/pipelines/: __init__.py  analysis_pipeline.py  asset_dto.py  asset_pipeline.py  health_dto.py  health_pipeline.py  recommendation_pipeline.py
servers/pipeline/src/repositories/: __init__.py
servers/pipeline/src/repositories/mongo/: __init__.py  asset_repository.py  object_type_repository.py
servers/pipeline/src/shared/: __init__.py  exceptions.py
servers/pipeline/src/workers/: __init__.py  asset_worker.py  health_worker.py
servers/pipeline/tests/: __init__.py  conftest.py
servers/pipeline/tests/api/: test_health_api.py  test_recommendations_api.py
servers/pipeline/tests/domains/asset/: __init__.py  test_value_objects.py
servers/pipeline/tests/domains/health/: __init__.py  test_value_objects.py
servers/pipeline/tests/domains/recommendation/: test_rules.py
servers/pipeline/tests/pipelines/: __init__.py  test_analysis_pipeline.py  test_asset_dto.py  test_asset_pipeline.py  test_health_dto.py  test_health_pipeline.py  test_recommendation_pipeline.py
servers/pipeline/tests/repositories/mongo/: __init__.py  test_asset_repository.py  test_object_type_repository.py
servers/pipeline/tests/workers/: __init__.py  test_asset_worker.py  test_health_worker.py  test_recommendation_applied.py
(+482 files in other folders)
