[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline"
version = "0.1.0"
description = "Python data pipeline: Kafka consume, MongoDB store, optional Redis/Postgres."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "kafka-python>=2.0",
    "pymongo>=4.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pandas>=2.2.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "httpx>=0.27.0",
]

[project.scripts]
pipeline-health = "workers.health_worker:main"
pipeline-asset-worker = "workers.asset_worker:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude-lines = ["if TYPE_CHECKING:", "if __name__ == .__main__.:"]
